[gd_scene load_steps=36 format=2]

[ext_resource path="res://Sprites/SomeStuff/6.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player_sFaces.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Scripts/SelectingMenu.gd" type="Script" id=3]
[ext_resource path="res://Sprites/SomeStuff/4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/SomeStuff/2.png" type="Texture" id=5]
[ext_resource path="res://Sprites/SomeStuff/1.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Borders/1bg_border_ruins.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Logos/UTOL.png" type="Texture" id=8]
[ext_resource path="res://Scripts/TitleBar.gd" type="Script" id=9]
[ext_resource path="res://Scripts/HoverBarButton.tres" type="StyleBox" id=10]
[ext_resource path="res://Scripts/PressedBarButton.tres" type="StyleBox" id=11]
[ext_resource path="res://SFX/saving.ogg" type="AudioStream" id=12]
[ext_resource path="res://SFX/click.wav" type="AudioStream" id=13]
[ext_resource path="res://SFX/select.wav" type="AudioStream" id=14]
[ext_resource path="res://Audios/file-select.ogg" type="AudioStream" id=15]
[ext_resource path="res://Fonts/ttf/determinationmonoweb-webfont.ttf" type="DynamicFontData" id=16]

[sub_resource type="Animation" id=1]
resource_name = "anim"
length = 11.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 11 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 800, 269 ), Vector2( 160, 269 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "anim"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 800, 269 ), Vector2( 160, 269 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "anim"
length = 7.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 800, 269 ), Vector2( 155, 269 ) ]
}

[sub_resource type="DynamicFontData" id=4]
resource_local_to_scene = true
antialiased = false
font_path = "res://Fonts/ttf/determinationmonoweb-webfont.ttf"

[sub_resource type="DynamicFont" id=5]
resource_local_to_scene = true
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 12
anti_aliasing = false

[sub_resource type="DynamicFont" id=7]
resource_local_to_scene = true
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 12
anti_aliasing = false

[sub_resource type="DynamicFont" id=9]
resource_local_to_scene = true
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0, 0, 0, 0.521569 )
shadow_size = 16
anti_aliasing = false

[sub_resource type="DynamicFontData" id=11]
resource_local_to_scene = true
antialiased = false
font_path = "res://Fonts/ttf/determinationmonoweb-webfont.ttf"

[sub_resource type="DynamicFont" id=12]
resource_local_to_scene = true
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 11 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.180392, 0.180392, 0.360784, 0 )

[sub_resource type="DynamicFontData" id=15]
font_path = "res://Fonts/ttf/arial.ttf"

[sub_resource type="DynamicFont" id=16]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 15 )

[sub_resource type="DynamicFont" id=17]
resource_local_to_scene = true
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=19]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Control3" type="Control" parent="."]
margin_top = 1.0
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control3"]
position = Vector2( 800, 269 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="Control3"]
position = Vector2( 578.909, 269 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control3/Sprite2"]
autoplay = "anim"
anims/anim = SubResource( 1 )

[node name="Sprite3" type="Sprite" parent="Control3"]
position = Vector2( 496, 269 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control3/Sprite3"]
autoplay = "anim"
anims/anim = SubResource( 2 )

[node name="Sprite4" type="Sprite" parent="Control3"]
position = Vector2( 155, 269 )
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control3/Sprite4"]
autoplay = "anim"
anims/anim = SubResource( 3 )

[node name="Control" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -264.0
margin_top = 188.0
margin_right = 272.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 5 )
text = "User"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User2" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -264.0
margin_top = 213.932
margin_right = 272.0
margin_bottom = 258.932
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "SpringLock_"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -208.0
margin_top = 267.851
margin_right = 216.0
margin_bottom = 293.851
custom_fonts/font = SubResource( 5 )
text = "Stats"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="User4" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -215.0
margin_top = 294.0
margin_right = 224.0
margin_bottom = 335.0
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "LV: 20, DF: 20, AT:20"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
margin_left = 420.0
margin_top = 56.0
margin_right = 548.0
margin_bottom = 184.0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Control/Panel"]
position = Vector2( 64, 64 )
scale = Vector2( 2, 2 )
frames = ExtResource( 2 )
animation = "Chara"

[node name="bg_border_ruins" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 7 )

[node name="TitleBar" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 24.0
mouse_filter = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UTOL" type="Sprite" parent="TitleBar"]
position = Vector2( 12, 13 )
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="TitleBar"]
margin_left = 24.0
margin_top = 5.0
margin_right = 295.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 12 )
text = "Undertale Online"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 912.0
margin_right = 960.0
margin_bottom = 24.0
mouse_filter = 1
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 16 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MinimizeButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 864.0
margin_right = 910.0
margin_bottom = 24.0
mouse_filter = 1
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 16 )
text = "−"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="White1" type="Node2D" parent="."]

[node name="Play" type="Label" parent="White1"]
margin_top = 352.0
margin_right = 960.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="White1"]
margin_top = 392.0
margin_right = 960.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="White1"]
margin_top = 432.0
margin_right = 960.0
margin_bottom = 472.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Controls"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="White2" type="Node2D" parent="."]

[node name="Play" type="Label" parent="White2"]
margin_top = 352.0
margin_right = 960.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="White2"]
margin_top = 392.0
margin_right = 960.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="White2"]
margin_top = 432.0
margin_right = 960.0
margin_bottom = 472.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Controls"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="White3" type="Node2D" parent="."]

[node name="Play" type="Label" parent="White3"]
margin_top = 352.0
margin_right = 960.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="White3"]
margin_top = 392.0
margin_right = 960.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="White3"]
margin_top = 432.0
margin_right = 960.0
margin_bottom = 472.0
custom_fonts/font = SubResource( 17 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
text = "Controls"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Label" parent="."]
margin_top = 352.0
margin_right = 960.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 17 )
text = "Play"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Label" parent="."]
margin_top = 392.0
margin_right = 960.0
margin_bottom = 432.0
custom_fonts/font = SubResource( 17 )
text = "Settings"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Label" parent="."]
margin_top = 432.0
margin_right = 960.0
margin_bottom = 472.0
custom_fonts/font = SubResource( 17 )
text = "Controls"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 160.0
margin_top = 30.0
margin_right = 800.0
margin_bottom = 509.0
mouse_filter = 1
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
autoplay = "FadeIn"
anims/FadeIn = SubResource( 18 )
anims/FadeOut = SubResource( 19 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )
volume_db = 10.0

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = 10.0

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = 1.0

[node name="BGSONG" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
autoplay = true

[connection signal="gui_input" from="TitleBar" to="TitleBar" method="_on_TitleBar_gui_input"]
[connection signal="pressed" from="ExitButton" to="TitleBar" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="MinimizeButton" to="TitleBar" method="_on_MinimizeButton_pressed"]
[connection signal="animation_finished" from="ColorRect/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
